<?xml version="1.0"?>
<package format="2">
  <name>myrobot</name>
  <version>0.0.1</version>
  <description>The robot_gazebo package</description>

  <maintainer email="zh@gmail.com">zh</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>


  </export>
</package>
